--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -15,6 +15,7 @@ flask-sqlalchemy = "^3.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
