--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12.3"
 flask = "^3.0.3"
 psycopg2-binary = "^2.9.9"
 flask-sqlalchemy = "^3.1.1"
+flask-session = "^0.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
