--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -12,6 +12,7 @@ flask = "^3.0.3"
 psycopg2-binary = "^2.9.9"
 flask-sqlalchemy = "^3.1.1"
 flask-session = "^0.8.0"
+flask-bcrypt = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
