--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -15,6 +15,7 @@ flask-session = "^0.8.0"
 flask-bcrypt = "^1.0.1"
 wtforms = "^3.1.2"
 email-validator = "^2.2.0"
+minio = "^7.2.9"
 
 
 [tool.poetry.group.dev.dependencies]
