--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.9"
 flask-sqlalchemy = "^3.1.1"
 flask-session = "^0.8.0"
 flask-bcrypt = "^1.0.1"
+minio = "^7.2.9"
 
 
 [tool.poetry.group.dev.dependencies]
