--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -24,6 +24,7 @@ python-ulid = "^2.7.0"
 pytest = "^8.3.2"
 python-dotenv = "^1.0.1"
 pytest-mock = "^3.14.0"
+faker = "^30.6.0"
 
 [build-system]
 requires = ["poetry-core"]
