--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -18,6 +18,9 @@ wtforms = "^3.1.2"
 email-validator = "^2.2.0"
 minio = "^7.2.9"
 python-ulid = "^2.7.0"
+authlib = "^1.3.2"
+requests = "^2.32.3"
+pyopenssl = "^24.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
