--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -21,6 +21,7 @@ python-ulid = "^2.7.0"
 authlib = "^1.3.2"
 requests = "^2.32.3"
 pyopenssl = "^24.2.1"
+matplotlib = "^3.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
