--- a/portal/package.json
+++ b/portal/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^2.23.1",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-toastify": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
