--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -22,6 +22,7 @@ authlib = "^1.3.2"
 requests = "^2.32.3"
 pyopenssl = "^24.2.1"
 matplotlib = "^3.9.2"
+marshmallow = "^3.23.1"
 
 
 [tool.poetry.group.dev.dependencies]
