--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -23,6 +23,7 @@ requests = "^2.32.3"
 pyopenssl = "^24.2.1"
 matplotlib = "^3.9.2"
 marshmallow = "^3.23.1"
+marshmallow-enum = "^1.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
