--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -25,6 +25,7 @@ matplotlib = "^3.9.2"
 marshmallow = "^3.23.1"
 marshmallow-enum = "^1.5.1"
 flask-cors = "^5.0.0"
+werkzeug = "^3.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
